--- a/main.html
+++ b/main.html
@@ -38,7 +38,18 @@
             <div class="selectItem">BE</div>
           </div>
         </div>
-        <div class="flexBox" id="rightDiv"></div>
+        <div class="flexBox" id="rightDiv">
+          <form id="loginForm">
+            <div id="loginHeader">
+              <span>LOGIN</span>
+            </div>
+            <div id="inputDiv">
+              <input type="text" name="username" placeholder="username" />
+              <input type="password" name="password" placeholder="password" />
+            </div>
+            <button>로그인</button>
+          </form>
+        </div>
       </div>
     </div>
   </body>
