left container 완료

--- a/main.html
+++ b/main.html
@@ -4,40 +4,47 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>영남대 멋쟁이사자처럼 13기</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
-    <img src="likelion.png" alt="likelion" class="멋사 logo" width="150px"/>
+    <div class = "main-container">
+      <div class = "left-container">
+        <div class = "intro-container">
+          <img src="likelion.png" alt="13th-fe-likelion" width="240px"/>
+          <div id="title">영남대학교<br>멋쟁이사자처럼<br>13기</div>
+        </div>
+        <div class ="intro">
+          <div id="intro-txt">여러분을 진심으로 환영합니다!</div>
+          <div><br></div>
+          <div id="intro-txt">
+            멋쟁이사자처럼은 성장 의지를 가진 사람들을 돕기 위해 존재합니다. 그리고 이들을 돕기 위한 가장 근본적이고 효과적인 방법은 교육이라고 생각합니다!
+          </div>
+        </div>
+        <div class = "box-container">
+          <div class = "textbox">
+            <div id="box-txt">P&D</div>
+            <div id="box-txt">FE</div>
+            <div id="box-txt">BE</div>
+          </div> 
+        </div>
 
 
-    <div id="txt">영남대학교 멋쟁이사자처럼 13기</div>
 
 
-    <div id="txt">여러분을 진심으로 환영합니다</div>
-    <div id="txt">멋쟁이 사자처럼은 성장 의지를 가진 사람들을 돕기 위해 존재합니디. 그리고 이들을 돕기 위한 가장 근본적이고 효과적인 방법은 교육이라고 생각합니다!</div>
-
-    <div class = "box-container">
-      <div class = "textbox" id="left-bottom">
-        <div id="box-txt">P&D</div>
-      </div> 
-      <div class = "textbox" id="left-bottom">
-        <div id="box-txt">FE</div>
-      </div> 
-      <div class = "textbox" id="left-bottom">
-        <div id="box-txt">BE</div>
-      </div> 
-    </div>
-
-    <div class = "left-container">
-      <div id="txt">Login</div>
-      <form>
-        <input type="text" id="login" name="username" placeholder="username" required />
-        <input type ="text" id="login" name="password" placeholder="password" required />
-      </form>
-      <button id="submit">로그인</button>  
-    </div>
+      </div>
     
+<!---
 
+
+            <div class = "left-container">
+              <div id="txt">Login</div>
+              <form>
+                <input type="text" id="login" name="username" placeholder="username" required />
+                <input type ="text" id="login" name="password" placeholder="password" required />
+              </form>
+              <button type = button id="submit">로그인</button>  
+            </div> -->
+    </div>
   </body>
 </html>
 
