feat: likelion.png 이미지 추가

--- a/main.html
+++ b/main.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <img src="likelion.png" style="width: 200px; margin-left: 100px; margin-top: 100px;" alt="영대멋사로고" />
+  </body>
 </html>
 
-<!-- 자유로운 방식으로 구현하시면 되며, .github 폴더는 신경쓰지 않으셔도 됩니다. -->
