--- a/main.html
+++ b/main.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <img src="likelion.png" style="width: 200px; margin-left: 100px; margin-top: 100px;" alt="영대멋사로고" />
+    <div class="container">
+      <img src="likelion.png" style="width: 200px" alt="영대멋사로고" />
+      <div class="text-box">
+        <div>영남대학교</div>
+        <div>멋쟁이사자처럼</div>
+        <div>13기</div>
+      </div>
+    </div>
   </body>
 </html>
 
