feat: 텍스트 추가

--- a/main.html
+++ b/main.html
@@ -15,6 +15,12 @@
         <div>13기</div>
       </div>
     </div>
+    <div class="message">
+      <div>여러분을 진심으로 환영합니다!</div>
+      <div style="margin-top: 40px;">멋쟁이사자처럼은 '성장 의지를 가진 사람들을 돕기 위해</div>
+      <div>존재합니다. 그리고 이들을 돕기 위한 가장 근본적이고</div>
+      <div>효과적인 방법은 교육이라고 생각합니다!</div>
+    </div>
   </body>
 </html>
 
