--- a/main.html
+++ b/main.html
@@ -4,8 +4,45 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+    <style>
+    .rounded {
+      width: 120px;
+      background-color: rgb(255, 255, 255);
+      border: 2px solid rgb(255, 193, 107);
+      line-height: 1rem;
+      border-radius: 0.5rem;
+      display: inline-block;
+      text-align : center;
+      padding : 100px 0;
+      font-weight: bold;
+      font-size: 20px;
+    }
+    </style>
   </head>
-  <body></body>
+  <body>
+    <div>
+      <img src="likelion.png" style="width: 200px" alt="영대멋사로고" />
+      <body style="background-color:rgb(0, 0, 0)"></body>
+      <h2>영남대학교</h2>
+      <h2>멋쟁이사자처럼</h2>
+      <h2>13기</h2>
+      <p class="white">여러분을 진심으로 환영합니다!</p>
+      <p class="white">멋쟁이사자처럼은 '성장 의지를 가진 사람들을 돕기 위해<br>
+        존재합니다. 그리고 이들을 돕기 위한 가장 근본적이고<br>
+        효과적인 방법은 교육이라고 생각합니다!<br>
+      </p>
+      <div class="rounded">P&D</div>
+      <div class="rounded">FE</div>
+      <div class="rounded">BE</div>
+    </div>
+    <div>
+      <div class="container">
+        <div class="box" id="column-box">LOGIN
+          <div class="mini">username</div>
+          <div class="mini">password</div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
-
-<!-- 자유로운 방식으로 구현하시면 되며, .github 폴더는 신경쓰지 않으셔도 됩니다. -->
