--- a/main.html
+++ b/main.html
@@ -1,26 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div class="container">
-      <img src="likelion.png" style="width: 200px" alt="영대멋사로고" />
-      <div class="text-box">
-        <div>영남대학교</div>
-        <div>멋쟁이사자처럼</div>
-        <div>13기</div>
-      </div>
-    </div>
-    <div class="message">
-      <div>여러분을 진심으로 환영합니다!</div>
-      <div style="margin-top: 40px;">멋쟁이사자처럼은 '성장 의지를 가진 사람들을 돕기 위해</div>
-      <div>존재합니다. 그리고 이들을 돕기 위한 가장 근본적이고</div>
-      <div>효과적인 방법은 교육이라고 생각합니다!</div>
-    </div>
-  </body>
-</html>
 
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <div class="container">
+    <img src="likelion.png" style="width: 200px" alt="영대멋사로고" />
+    <div class="text-box">
+      <div>영남대학교</div>
+      <div>멋쟁이사자처럼</div>
+      <div>13기</div>
+    </div>
+  </div>
+  <div class="message">
+    <div>여러분을 진심으로 환영합니다!</div>
+    <div style="margin-top: 40px;">멋쟁이사자처럼은 '성장 의지를 가진 사람들을 돕기 위해</div>
+    <div>존재합니다. 그리고 이들을 돕기 위한 가장 근본적이고</div>
+    <div>효과적인 방법은 교육이라고 생각합니다!</div>
+  </div>
+  <div class="part">
+    <div class="part-box">P&D</div>
+    <div class="part-box">FE</div>
+    <div class="part-box">BE</div>
+  </div>
+
+</body>
+
+</html>
