right container 완료

--- a/main.html
+++ b/main.html
@@ -27,25 +27,33 @@
             <div id="box-txt">BE</div>
           </div> 
         </div>
-
-
-
-
       </div>
-    
-<!---
-
-
-            <div class = "left-container">
-              <div id="txt">Login</div>
-              <form>
+      <div class = "right-container">
+        <div class ="login-container">
+          <div id="login-head">LOGIN</div>
+          <div>
+            <form>
+              <div class = "input-container">
+                <span class="icon">
+                  <svg width="20" height="20" viewBox="0 0 24 24" fill="#888" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12 12c2.76 0 5-2.24 5-5s-2.24-5-5-5-5 2.24-5 5 2.24 5 5 5zm0 2c-3.87 0-7 3.13-7 7v1h14v-1c0-3.87-3.13-7-7-7z"/>
+                  </svg>
+                </span>
                 <input type="text" id="login" name="username" placeholder="username" required />
+              </div>
+              <div class = "input-container">
+                <span class="icon">
+                  <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12 2C8.13 2 5 5.13 5 9v4H4v8h16v-8h-1v-4c0-3.87-3.13-7-7-7zm0 2c3.31 0 6 2.69 6 6v4H6v-4c0-3.31 2.69-6 6-6z" fill="#888"/>
+                  </svg>
+                </span>
                 <input type ="text" id="login" name="password" placeholder="password" required />
-              </form>
-              <button type = button id="submit">로그인</button>  
-            </div> -->
+              </div>
+            </form>
+          </div>     
+          <button type = button id="submit">로그인</button>  
+        </div>
+      </div>
     </div>
   </body>
-</html>
-
-<!-- 자유로운 방식으로 구현하시면 되며, .github 폴더는 신경쓰지 않으셔도 됩니다. -->
+</html> 
