--- a/main.html
+++ b/main.html
@@ -30,11 +30,11 @@
       </div>
       <div class = "right-container">
         <div class ="login-container">
-          <div id="login-head">LOGIN</div>
+          <div class="login-head">LOGIN</div>
           <div>
             <form>
               <div class = "input-container">
-                <span class="icon">
+                <span id="icon">  
                   <svg width="20" height="20" viewBox="0 0 24 24" fill="#888" xmlns="http://www.w3.org/2000/svg">
                     <path d="M12 12c2.76 0 5-2.24 5-5s-2.24-5-5-5-5 2.24-5 5 2.24 5 5 5zm0 2c-3.87 0-7 3.13-7 7v1h14v-1c0-3.87-3.13-7-7-7z"/>
                   </svg>
@@ -42,7 +42,7 @@
                 <input type="text" id="login" name="username" placeholder="username" required />
               </div>
               <div class = "input-container">
-                <span class="icon">
+                <span id="icon">
                   <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M12 2C8.13 2 5 5.13 5 9v4H4v8h16v-8h-1v-4c0-3.87-3.13-7-7-7zm0 2c3.31 0 6 2.69 6 6v4H6v-4c0-3.31 2.69-6 6-6z" fill="#888"/>
                   </svg>
@@ -51,7 +51,7 @@
               </div>
             </form>
           </div>     
-          <button type = button id="submit">로그인</button>  
+          <button type = button class="submit">로그인</button>  
         </div>
       </div>
     </div>
