--- a/main.html
+++ b/main.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body></body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <div class="container">
+    <div class="logo-section"></div>
+    <div class="welcom-description"></div>
+    <div class="track-cards"></div>
+  </div>
+  <div class="container">
+
+  </div>
+</body>
+
 </html>
 
 <!-- 자유로운 방식으로 구현하시면 되며, .github 폴더는 신경쓰지 않으셔도 됩니다. -->
