--- a/main.html
+++ b/main.html
@@ -10,9 +10,21 @@
 
 <body>
   <div class="container">
-    <div class="logo-section"></div>
-    <div class="welcom-description"></div>
-    <div class="track-cards"></div>
+    <div class="logo-section">
+      <img src="likelion.png" style="width: 240px" alt="영대멋사로고" />
+      <div class="logo-title">
+        영남대학교<br>멋쟁이사자처럼<br>13기
+      </div>
+    </div>
+    <div class="welcom-description">
+      <p>여러분을 진심으로 환영합니다!</p>
+      <p>멋쟁이사자처럼은 '성장 의지를 가진 사람들을 돕기 위해 존재합니다. 그리고 이들을 돕기 위한 가장 근본적이고 효과적인 방법은 교육이라고 생각합니다!</p>
+    </div>
+    <div class="track-cards">
+      <div class="track-card">P&D</div>
+      <div class="track-card">FE</div>
+      <div class="track-card">BE</div>
+    </div>
   </div>
   <div class="container">
 
