--- a/main.html
+++ b/main.html
@@ -26,11 +26,18 @@
       <div class="track-card">BE</div>
     </div>
   </div>
-  <div class="container">
-
+  <div class="container" id="login-form">
+    <h1>LOGIN</h1>
+    <div class="input-box">
+      <span style="font-size: 35px;">👤</span>
+      <input type="text" placeholder="username" />
+    </div>
+    <div class="input-box">
+      <span style="font-size: 35px;">🔒</span>
+      <input type="password" placeholder="password" />
+    </div>
+    <button class="login-btn">로그인</button>
   </div>
 </body>
 
 </html>
-
-<!-- 자유로운 방식으로 구현하시면 되며, .github 폴더는 신경쓰지 않으셔도 됩니다. -->
