--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
             <div class="box" id="left">
                 <div class="box" id="top">
                     <div class="box" id="image">
-                        <img src="image.png" style="width: 180px" alt="멋사로고" />
+                        <img src="likelion.png" style="width: 180px" alt="멋사로고" />
                     </div>
                     <div class="box" id="text">
                         <div>영남대학교</div>
