feat: 로그인 텍스트 및 입력 요소 구현

--- a/main.html
+++ b/main.html
@@ -28,7 +28,11 @@
     <div class="part-box">FE</div>
     <div class="part-box">BE</div>
   </div>
-
+  <div class="login">
+    <div>LOGIN</div>
+    <input style="margin-top: 20px;" type="text" name="아이디" placeholder="username" />
+    <input type="password" name="비밀번호" placeholder="password" />
+  </div>
 </body>
 
 </html>
