--- a/main.html
+++ b/main.html
@@ -23,9 +23,9 @@
                     <div class="clear">여러분을 진심으로 환영합니다!</div>
                     <br>
                     <p>멋쟁이사자처럼은 성장 의지를 가진 사람들을 돕기 위해 존재합니다. 그리고 이들을 돕기 위한 가장 근본적이고 효과적인 방법은 교육이라고 생각합니다!</p>
-                    <div id="PD"><h2>P&D</h2></div>
-                    <div id="BE"><h2>BE</h2></div>
-                    <div id="FE"><h2>FE</h2></div>
+                    <div id="PD"><span>P&D</span></div>
+                    <div id="FE"><span>FE</span></div>
+                    <div id="BE"><span>BE</span></div>
                 </div>
             </div>
             <div class="box" id="right">
