--- a/main.html
+++ b/main.html
@@ -1,11 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<br lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel = "stylesheet" href = "style.css"/>
+    
   </head>
-  <body></body>
-</html>
+  <br>
+    <img src = "likelion.png" stlye = "width: 100px" alt="영대멋사로고">    
+  
+  <div id="intro">
+    <div><strong>영남대학교</strong></div>
+    <div><strong>멋쟁이사자처럼</strong></div>
+    <div><strong>13기</strong></div>
+  </div>
 
-<!-- 자유로운 방식으로 구현하시면 되며, .github 폴더는 신경쓰지 않으셔도 됩니다. -->
+    <div id="intro2">
+    <div>여러분을 진심으로 환영합니다!</div>
+    <br>멋쟁이사자처럼은 '성장 의지를 가진 사람들을 돕기 위해</br>존재합니다. 그리고 이들을 돕기 위한 가장 근본적이고</br>효과적인 방법은 교육이라고 생각합니다!</div>
+  </div>
+  
+  <div id = "position">
+    <div class = "box" id = "P&D">P&D</div>
+    <div class = "box" id = "FE">FE</div>
+    <div class = "box" id = "BE">BE</div>
+  </div>
+    <div class = "container">
+      <div class = "login"><strong>Login</strong></div>
+      <div>
+        <img src="img1.png" alt="아이콘" class="input-icon">
+        <input type="text" name="username" placeholder="username"/>
+      </div>
+        <img src="img2.png" alt="아이콘" class="input-icon2">
+      <div><input type="password" name="password" placeholder="password" /></div>
+      <div><button type="submint">로그인</button></div>
+    </div>
+  </body>
+</html>
