--- a/main.html
+++ b/main.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
+    <!-- 화면 쪼개기 - 왼쪽 -->
     <div class="page_left">
+        <!-- 이미지와 제목을 묶음 1번으로 -->
         <div class="container">
             <img src="likelion.png" width="200px" height="125px">
             <div>
@@ -19,11 +21,13 @@
             </div>
         </div>
 
+        <!-- 두 문단을 묶음 2번으로 + id 지정 -->
         <div class="container" id="text">
             <p>여러분을 진심으로 환영합니다!</p>
             <p>멋쟁이사자처럼은 성장 의지를 가진 사람들을 돕기 위해 존재합니다. 그리고 이들을 돕기 위한 가장 근본적이고 효과적인 방법은 교육이라고 생각합니다!</p>
         </div>
 
+        <!-- 3개의 키워드를 묶음 3번으로 -->
         <div class="container">
             <h3>P&D</h3>
             <h3>FE</h3>
@@ -31,8 +35,10 @@
         </div>
     </div>
 
+    <!-- 화면 쪼개기 - 오른쪽 -->
     <div class="page_right">
-        <h3>LOGIN</h3>
+        <h2>LOGIN</h2>
+        <!-- 아이콘과 input을 묶음으로 -->
         <div class="container">
             <!-- 사람 모양 svg -->
             <svg fill="gray" height="57" width="26" xmlns="http://www.w3.org/2000/svg" fill="#000000" width="800px"
@@ -42,6 +48,7 @@
             </svg>
             <input type="text" name="username" placeholder="USERNAME" />
         </div>
+        <!-- 아이콘과 input을 묶음으로 -->
         <div class="container">
             <!-- 좌물쇠 모양 svg -->
             <svg fill="gray" height="57" width="26" xmlns="http://www.w3.org/2000/svg" fill="#000000" width="800px"
