--- a/main.html
+++ b/main.html
@@ -5,42 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
-    <style>
-    .rounded {
-      width: 120px;
-      background-color: rgb(255, 255, 255);
-      border: 2px solid rgb(255, 193, 107);
-      line-height: 1rem;
-      border-radius: 0.5rem;
-      display: inline-block;
-      text-align : center;
-      padding : 100px 0;
-      font-weight: bold;
-      font-size: 20px;
-    }
-    </style>
+    <script src="https://kit.fontawesome.com/1734d95da4.js" crossorigin="anonymous"></script>
   </head>
-  <body>
-    <div>
-      <img src="likelion.png" style="width: 200px" alt="영대멋사로고" />
-      <body style="background-color:rgb(0, 0, 0)"></body>
-      <h2>영남대학교</h2>
-      <h2>멋쟁이사자처럼</h2>
-      <h2>13기</h2>
-      <p class="white">여러분을 진심으로 환영합니다!</p>
-      <p class="white">멋쟁이사자처럼은 '성장 의지를 가진 사람들을 돕기 위해<br>
-        존재합니다. 그리고 이들을 돕기 위한 가장 근본적이고<br>
-        효과적인 방법은 교육이라고 생각합니다!<br>
-      </p>
-      <div class="rounded">P&D</div>
-      <div class="rounded">FE</div>
-      <div class="rounded">BE</div>
-    </div>
-    <div>
-      <div class="container">
+  <body style="background-color: rgb(0, 0, 0)">
+    <div class="main-layout">
+      <div class="left-content">
+        <img src="likelion.png" style="width: 250px" alt="영대멋사로고" />
+        <h2>영남대학교</h2>
+        <h2>멋쟁이사자처럼</h2>
+        <h2>13기</h2>
+        <p class="white">여러분을 진심으로 환영합니다!</p>
+        <p class="white">멋쟁이사자처럼은 '성장 의지를 가진 사람들을 돕기 위해<br>
+          존재합니다. 그리고 이들을 돕기 위한 가장 근본적이고<br>
+          효과적인 방법은 교육이라고 생각합니다!
+        </p>
+        <div class="rounded">P&D</div>
+        <div class="rounded">FE</div>
+        <div class="rounded">BE</div>
+      </div>
+    
+      <div class="right-login">
         <div class="box" id="column-box">LOGIN
-          <div class="mini">username</div>
-          <div class="mini">password</div>
+          <div class="mini">
+            <form>
+              <div class="icon">
+                <i class="fa-solid fa-user"></i>
+                <input type="text" name="username" placeholder="username" />
+              </div>
+              <div class="icon">
+                <i class="fa-solid fa-lock"></i>
+                <input type="password" name="password" placeholder="password" />
+              </div>
+              <button type="submit">로그인</button>
+            </form>
+          </div>
         </div>
       </div>
     </div>
