아이콘 추가 및 위치 조정

--- a/main.html
+++ b/main.html
@@ -9,29 +9,31 @@
 </head>
 
 <body>
-  <div class="container">
-    <img src="likelion.png" style="width: 200px" alt="영대멋사로고" />
-    <div class="text-box">
-      <div>영남대학교</div>
-      <div>멋쟁이사자처럼</div>
-      <div>13기</div>
+  <div class="left">
+    <div class="container">
+      <img src="likelion.png" style="width: 200px" alt="영대멋사로고" />
+      <div class="text-box">
+        <div>영남대학교</div>
+        <div>멋쟁이사자처럼</div>
+        <div>13기</div>
+      </div>
     </div>
-  </div>
-  <div class="message">
-    <div>여러분을 진심으로 환영합니다!</div>
-    <div style="margin-top: 40px;">멋쟁이사자처럼은 '성장 의지를 가진 사람들을 돕기 위해</div>
-    <div>존재합니다. 그리고 이들을 돕기 위한 가장 근본적이고</div>
-    <div>효과적인 방법은 교육이라고 생각합니다!</div>
-  </div>
-  <div class="part">
-    <div class="part-box">P&D</div>
-    <div class="part-box">FE</div>
-    <div class="part-box">BE</div>
+    <div class="message">
+      <div>여러분을 진심으로 환영합니다!</div>
+      <div style="margin-top: 40px;">멋쟁이사자처럼은 '성장 의지를 가진 사람들을 돕기 위해</div>
+      <div>존재합니다. 그리고 이들을 돕기 위한 가장 근본적이고</div>
+      <div>효과적인 방법은 교육이라고 생각합니다!</div>
+    </div>
+    <div class="part">
+      <div class="part-box">P&D</div>
+      <div class="part-box">FE</div>
+      <div class="part-box">BE</div>
+    </div>
   </div>
   <div class="login">
     <div>LOGIN</div>
-    <input style="margin-top: 20px;" type="text" name="아이디" placeholder="username" />
-    <input type="password" name="비밀번호" placeholder="password" />
+    <input style="margin-top: 20px;" type="text" name="아이디" placeholder="👤 username" />
+    <input type="password" name="비밀번호" placeholder="🔒 password" />
     <button>로그인</button>
   </div>
 </body>
