--- a/main.html
+++ b/main.html
@@ -11,7 +11,11 @@
       <div class = "left-container">
         <div class = "intro-container">
           <img src="likelion.png" alt="13th-fe-likelion" width="240px"/>
-          <div id="title">영남대학교<br>멋쟁이사자처럼<br>13기</div>
+          <div id="title">
+            <div>영남대학교</div>
+            <div>멋쟁이사자처럼럼</div>
+            <div>13기</div>
+          </div>
         </div>
         <div class ="intro">
           <div id="intro-txt">여러분을 진심으로 환영합니다!</div>
@@ -21,11 +25,9 @@
           </div>
         </div>
         <div class = "box-container">
-          <div class = "textbox">
-            <div id="box-txt">P&D</div>
-            <div id="box-txt">FE</div>
-            <div id="box-txt">BE</div>
-          </div> 
+          <div class="box-txt">P&D</div>
+          <div class="box-txt">FE</div>
+          <div class="box-txt">BE</div>
         </div>
       </div>
       <div class = "right-container">
