--- a/main.html
+++ b/main.html
@@ -1,11 +1,91 @@
+-
+
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body></body>
-</html>
 
-<!-- 자유로운 방식으로 구현하시면 되며, .github 폴더는 신경쓰지 않으셔도 됩니다. -->
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="stylesheet" href="main.css" />
+</head>
+
+<body>
+  <div class="whole">
+    <!-- 전체화면 -->
+    <div class="info">
+      <!-- 화면좌측 -->
+
+      <div class="info_sort">
+        <div>
+          <!-- 이미지 -->
+          <img src="likelion.png" style="width: 200px" alt="영대멋사로고" />
+        </div>
+        <div class="name">
+          <!-- 이름 -->
+          <ul>
+            <li>
+              영남대학교
+            </li>
+            <li>
+              멋쟁이사자처럼
+            </li>
+            <li>
+              13기
+            </li>
+          </ul>
+        </div>
+
+
+      </div>
+      <div class="intro">
+        <!-- 소개글 -->
+        <p>여러분을 진심으로 환영합니다!</p>
+        <p>멋쟁이사자처럼은 '성장 의지를 가진 사람들을 돕기 위해 존재합니다. 그리고 이들을 돕기 위한 가장 근본적이고 효과적인 방법은 교육이라 생각합니다!'
+        </p>
+      </div>
+      <div class="partbox">
+        <!-- 파트별 소개 -->
+
+        <div class="box">P&D</div>
+        <div class="box">FE</div>
+        <div class="box">BE</div>
+      </div>
+
+    </div>
+    <div class="login">
+      <!-- 화면우측측 -->
+      <div class="login_container">
+        <div class="login_word">
+          LOGIN
+        </div>
+        <div class="login_box">
+
+          <div class="login_box_baby">
+            <div class="input_with_icon">
+              <img src="id.png" alt="user icon" />
+              <input type="text" name="username" placeholder="username" />
+            </div>
+          </div>
+          <div class="login_box_baby">
+            <div class="input_with_icon">
+              <img src="pw.png" alt="password icon" />
+              <input type="text" name="password" placeholder="password" />
+            </div>
+          </div>
+          <div class="login_box_baby"><button type="submit">로그인</button></div>
+
+
+
+        </div>
+        <div></div>
+      </div>
+
+
+    </div>
+  </div>
+
+
+</body>
+
+</html>
